...
            Spacer(modifier = Modifier.width(30.dp))
            IconPainter(
                name = "settings",
                theme = theme,
                size = 28.dp,
                modifier = Modifier
                    .testTag("settings_button")
                    .clickable { state.onOpenSettings() }
            )
        }

        Spacer(modifier = Modifier.height(40.dp))
    }
...
