...
                    indication = null,
                    interactionSource = remember { MutableInteractionSource() },
                    enabled = false,
                    onClick = {}
                )
                .padding(24.dp)
                .testTag("download_progress_dialog"),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Text(
                text = "正在下载更新...",
                fontSize = 15.sp,
                fontWeight = FontWeight.Medium,
...
